[package]
name = "surreal-rust-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = "1.0.0-beta.8"
tokio = { version = "1.21.2", features = ["full"] }
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0.40" 
thiserror = "1"